<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, BugzillaClientActivity!</string>
    <string name="app_name">Bugzilla Client</string>
    <string name="server_name">Server URL</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="store_prefs">Store Preferences</string>
    <string name="login_button">Login</string>
    <string name="setting_button">Settings</string>
    <string name="see_my_bugs_button">See My Bugs</string>
    <string name="browse_bugs_by_product_button">Browse Bugs By Product</string>
    <string name="report_bug_button">Report A Bug</string>
    <string name="server_tooltip">Server Url must start with \"http://\" or 
    \"https://\" and end with a trailing \"/\"</string>
    <string name="reported_by">Reported By:</string>
    <string name="bug_id_label">Bug ID:</string>
    <string name="product_label">Product:</string>
    <string name="severity_label">Severity:</string>
    <string name="version_label">Version:</string>
    <string name="component_label">Component:</string>
    <string name="op_sys_label">Operating System:</string>
    <string name="bug_creator">Bug Creator:</string>
    <string name="resolution_label">Resolution:</string>
    <string name="bug_reported_time_label">Bug Reported:</string>
    <string name="comments_label">Comments:</string>
    <string name="products_listview_title">Your Available Products</string>
    <string name="product_bugs_listview_title">Displaying Bugs By</string>
    <string name="logout_button">Logout</string>
    <string name="create_bug_assigned_to_label">Assigned To:</string>
    <string name="create_bug_summary_label">Summary:</string>
    <string name="create_bug_description_label">Description:</string>
    <string name="create_bug_submit_button_text">Submit Bug</string>
    <string name="component_prompt">Component</string>
    <string name="op_sys_prompt">Operating System</string>
    <string name="version_prompt">Version</string>
    <string name="platform_prompt">Platform</string>
    <string name="severity_prompt">Severity</string>
    <string name="priority_prompt">Priority</string>
    <string name="status_prompt">Status</string>
    <string name="UrlRegEx">^(http://|https://){1}[a-zA-Z-0-9\\.\\-/:]+[/]</string>
    <string name="createBugButtonLabel">Create A Bug</string>
    <string name="browseBugButtonLabel">Browse Bugs</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_home_screen_title">Home Screen</string>
</resources>
