<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <Button android:id="@+id/SeeMyBugsButton" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/see_my_bugs_button" android:layout_gravity="center_horizontal"></Button>
    <Button android:id="@+id/BrowseBugsByProductButton" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/browse_bugs_by_product_button" android:layout_gravity="center_horizontal"></Button>
    <Button android:id="@+id/ReportBugButton" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/report_bug_button" android:layout_gravity="center_horizontal"></Button>
    
</LinearLayout>
