<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blueBackground" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linearLayout1"
                android:text="Text" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false" >

            <Spinner
                android:id="@+id/createBugComponent"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:prompt="@string/component_prompt" >
            </Spinner>

            <Spinner
                android:id="@+id/createBugOpSys"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/createBugComponent"
                android:layout_weight="1"
                android:prompt="@string/op_sys_prompt" >
            </Spinner>

            <Spinner
                android:id="@+id/createBugVersion"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/createBugOpSys"
                android:layout_weight="1"
                android:prompt="@string/version_prompt" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout1" >

            <Spinner
                android:id="@+id/createBugPlatform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/platform_prompt" >
            </Spinner>

            <Spinner
                android:id="@+id/createBugSeverity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/severity_prompt" >
            </Spinner>

            <Spinner
                android:id="@+id/createBugPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/priority_prompt" >
            </Spinner>
        </LinearLayout>

        <Spinner
            android:id="@+id/createBugStatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:prompt="@string/status_prompt" >
        </Spinner>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/createBugStatus"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/createBugAssignedToLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_bug_assigned_to_label"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <EditText
                android:id="@+id/createBugAssignedToContent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </EditText>

            <TextView
                android:id="@+id/createBugSummaryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_bug_summary_label"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <EditText
                android:id="@+id/createBugSummaryContent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </EditText>

            <TextView
                android:id="@+id/createBugSummaryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_bug_description_label"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <EditText
                android:id="@+id/createBugDecriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="126dip"
                android:inputType="textPostalAddress" >
            </EditText>

            <Button
                android:id="@+id/createBugSubmitButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_bug_submit_button_text" >
            </Button>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>